// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Range > renders correct anticlockwise large 1`] = `
<g>
  <path
    d="M2.447174185242325,34.54915028125262 A50,50 0 1 0 97.55282581475768,34.54915028125264L92.79754323328191,36.09423525312738 A45,45 0 1 1 7.202456766718093,36.094235253127366 L2.447174185242325,34.54915028125262"
    style="fill: lime;"
  />
</g>
`;

exports[`Range > renders correct anticlockwise small 1`] = `
<g>
  <path
    d="M2.447174185242325,34.54915028125262 A50,50 0 0 0 49.99999999999999,100L49.99999999999999,95 A45,45 0 0 1 7.202456766718093,36.094235253127366 L2.447174185242325,34.54915028125262"
    style="fill: lime;"
  />
</g>
`;

exports[`Range > renders correct clockwise large 1`] = `
<g>
  <path
    d="M97.55282581475768,34.54915028125263 A50,50 0 1 1 2.447174185242325,34.549150281252615L7.202456766718093,36.09423525312735 A45,45 0 1 0 92.79754323328191,36.094235253127366 L97.55282581475768,34.54915028125263"
    style="fill: lime;"
  />
</g>
`;

exports[`Range > renders correct clockwise small 1`] = `
<g>
  <path
    d="M97.55282581475768,34.54915028125263 A50,50 0 0 1 50,100L50,95 A45,45 0 0 0 92.79754323328191,36.094235253127366 L97.55282581475768,34.54915028125263"
    style="fill: lime;"
  />
</g>
`;
